--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cookie-parser": "^1.4.6",
     "mysql2": "^3.9.1",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-kakao": "^1.0.1",
     "reflect-metadata": "^0.1.14",
@@ -57,6 +58,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-kakao": "^1.0.3",
     "@types/supertest": "^6.0.0",
     "@types/uuid": "^9.0.8",
