--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
-  "singleQuote": true,
+  "semi": true,
+  "singleQuote": false,
+  "tabWidth": 2,
   "trailingComma": "all",
-  "printWidth": 120
+  "printWidth": 80
 }
