--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -33,12 +33,15 @@ jobs:
           git checkout main
           git merge upstream/main --no-commit --no-ff
 
+      - name: Configure git
+        run: |
+          cd fork
+          git config user.name "minchodang"
+          git config user.email "minchodang@users.noreply.github.com"
+
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: 'Sync with upstream'
-          branch: sync-upstream
-          base: main
-          title: 'Sync with upstream'
-          body: 'This PR syncs the fork with upstream repository'
+        run: |
+          cd fork
+          gh pr create --title 'Sync with upstream' --body 'This PR syncs the fork with upstream repository' --base main --head sync-upstream
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
