--- a/package.json
+++ b/package.json
@@ -6,25 +6,26 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build && npm run copyfiles",
-    "copyfiles": "copyfiles -u 1 src/**/*.html dist/",
+    "build": "nest build && pnpm copyfiles",
+    "copyfiles": "pnpm exec copyfiles -u 1 src/**/*.html dist/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "pm2 start dist/main.js",
-    "restart:prod": "pm2 restart dist/main.js",
+    "start:prod": "pnpm exec pm2 start dist/main.js",
+    "restart:prod": "pnpm exec pm2 restart dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --dataSource src/database/config/typeorm-datasource.ts",
-    "migration:generate": "npm run typeorm migration:generate src/database/migrations/migration",
-    "migration:create": "npm run typeorm -- migration:create",
-    "migration:run": "npm run typeorm -- migration:run",
-    "migration:revert": "npm run typeorm -- migration:revert"
+    "typeorm": "pnpm exec ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --dataSource src/database/config/typeorm-datasource.ts",
+    "migration:generate": "pnpm typeorm migration:generate src/database/migrations/migration",
+    "migration:create": "pnpm typeorm -- migration:create",
+    "migration:run": "pnpm typeorm -- migration:run",
+    "migration:revert": "pnpm typeorm -- migration:revert",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.540.0",
@@ -41,6 +42,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "commander": "^12.1.0",
     "cookie-parser": "^1.4.6",
     "mysql2": "^3.9.1",
     "passport": "^0.7.0",
@@ -55,7 +57,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
+    "@nestjs/cli": "^10.4.8",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
@@ -67,13 +69,12 @@
     "@types/passport-kakao": "^1.0.3",
     "@types/supertest": "^6.0.0",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.5.0",
     "prettier": "^3.2.5",
     "source-map-support": "^0.5.21",
