--- a/package.json
+++ b/package.json
@@ -28,22 +28,25 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
+    "@apollo/server": "^4.11.2",
     "@aws-sdk/client-dynamodb": "^3.540.0",
     "@aws-sdk/client-ses": "^3.549.0",
     "@aws-sdk/lib-dynamodb": "^3.549.0",
+    "@nestjs/apollo": "^12.2.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.2.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^7.3.0",
     "@supabase/supabase-js": "^2.45.3",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "commander": "^12.1.0",
     "cookie-parser": "^1.4.6",
+    "graphql": "^16.9.0",
     "mysql2": "^3.9.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -52,7 +55,6 @@
     "pm2": "^5.3.1",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.20",
     "uuid": "^9.0.1"
   },
